--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(0, 0, 0, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -22,13 +22,16 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
+
+body,html {
+  background: #efefef;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  z-index: -1;
 }
+
 
 h1 {
   font-size: 3.2em;
@@ -36,18 +39,19 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  border: 2px solid #e1e1e1;
+  display: inline-block;
+  padding: 10px;
+  position: relative;
+  text-align: center;
+  border-radius: 10%;
+  transition: background 600ms ease, color 600ms ease;
 }
+
 button:hover {
-  border-color: #646cff;
+  background: #646cff;
+  border: 2px solid #3b41c4;
+  color: white;
 }
 button:focus,
 button:focus-visible {
@@ -57,7 +61,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #383838;
   }
   a:hover {
     color: #747bff;
